--- a/project/src/App.module.scss
+++ b/project/src/App.module.scss
@@ -1,9 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 .app {
   p {
-    @apply text-xl;
+    @apply text-xl text-red-500;
   }
 }
